# ARGOS

./: ARGOS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md
.obsidian/: workspace.json
Lovable-UI/: index.html  package-lock.json  package.json  tailwind.config.ts
Lovable-UI/.lovable/: plan.md
Lovable-UI/public/models/: lego.glb
Lovable-UI/src/: App.tsx  index.css
Lovable-UI/src/components/: AnimatedCounter.tsx  BackButton.tsx  Footer.tsx  LegoModel3D.tsx  Navbar.tsx  PhotoPlaceholder.tsx  SectionDivider.tsx  VideoPlaceholder.tsx
Lovable-UI/src/lib/: animations.ts
Lovable-UI/src/pages/: Contacto.tsx  Galeria.tsx  Index.tsx  JuegoDelRobot.tsx  NotFound.tsx  ProyectoInnovador.tsx  QuienesSomos.tsx  ValorFIRST.tsx
PROGRAMACION/tx_pulsador/: tx_pulsador.ino
deploy/raspi/: argos.service.example
docs/: .~lock.Mejoras en repositorio y README.docx#  README.md
docs/FIRST-AGE-FLL/: 1 Enunciado del proyecto.txt
docs/FUENTES - INFORMACION - INVESTIGACION/: Aporte del Proyecto innovador.docx
docs/referencias/: Mejoras en repositorio y README.docx  README.md  README_structure.txt  aclaraciones.txt
docs/seguridad/: README.md
docs/tesis/: Capitulo_4_Resultados.md
firmware/: README.md
hardware/: List.md  bom.md
software/: pyproject.toml
software/config/: argos.example.yaml  argos.yaml
software/src/argos_app/: cli.py  main.py  runtime.py
software/src/argos_app/decision/: motores.py
software/src/argos_app/sensors/: pt100.py
software/src/argos_app/vision/: stream_ia.py
(+15 files in other folders)
